2008-01-19  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, jhbuild/commands/base.py, jhbuild/config.py,
	jhbuild/defaults.jhbuildrc, jhbuild/modtypes/__init__.py,
	jhbuild/moduleset.py, modulesets/moduleset.dtd: implemented a support
	for "tags", modules are automatically tagged with the name of the
	moduleset they are from, and build, update and list commands accept a
	list of tags modules must match to be considered; based on idea and
	patch of Colin Walters.  (closes: #460360)

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/rdepends.py, jhbuild/moduleset.py,
	modulesets/hildon.modules: removed obvious cycle dependency of openobex
	on itself; also fixed rdepends to silently ignore cycle dependencies.
	(closes: #510498)

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py, tests/tests.py: fixed skip option, as skipped
	modules dependencies were not ignored (and fixed test case that I got
	wrong).

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: updated documentation to also list build systems
	that are supported, and to add some more consistency in how JHBuild is
	spelt.

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, jhbuild/commands/base.py, jhbuild/moduleset.py:
	added --soft-deps and --clusters options to the dot command; the
	--soft-deps option will add dotted lines from the modules to their soft
	dependencies; the --clusters option will group modules from metamodules
	together.

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules: switched waf from svn to tarball, patch
	by Gustavo Carneiro  (closes: #509131)

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules, patches/python-2.4.4-lib64.patch: added
	patch to Python so it works better on x86_64  (closes: #505128)
	(forward-ported Mandriva patch from 2.4.1 to 2.4.4)

2008-01-18  Frederic Peters  <fpeters@0d.be>
