@@ -1,9 +1,8 @@
 DOC_LINGUAS = 
 
 include $(top_srcdir)/gnome-doc-utils.make
+
 dist-hook: doc-dist-hook
 
-if DOC_INSTALLATION_ENABLED
 DOC_MODULE = jhbuild
 DOC_FIGURES = figures/jhbuild_sample_dot_output.png
-endif
