@@ -1,5 +1,11 @@
 2008-01-19  Frederic Peters  <fpeters@0d.be>
 
+	* Makefile.am, doc/Makefile.am: totally ignore the doc/ directory
+	unless --enable-doc-installation is passed to configure.
+	(closes: #510516)
+
+2008-01-19  Frederic Peters  <fpeters@0d.be>
+
 	* doc/C/jhbuild.xml, jhbuild/commands/base.py, jhbuild/config.py,
 	jhbuild/defaults.jhbuildrc, jhbuild/modtypes/__init__.py,
 	jhbuild/moduleset.py, modulesets/moduleset.dtd: implemented a support
